fix: remove whitespace between header and above-the-fold section

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,6 +23,7 @@ body {
 h1 {
     font-size: 3rem;
     line-height: 4.2rem;
+    margin: 0;
 }
 
 button {
